fix game z-index and hide game button on mobile

--- a/style/home.css
+++ b/style/home.css
@@ -75,3 +75,9 @@ main::before {
 	padding: 0;
 	border: 0;
 }
+
+@media screen and (max-width: 1080px) {
+	#game-button {
+		display: none;
+	}
+}
